--- a/index.html
+++ b/index.html
@@ -37,11 +37,28 @@
                 <input type="number" class="form-control" id="porcentaje_de_descuento" placeholder="Ejemplo: 20">
             </div>
 
-            <div class="d-grid gap-2 col-12 col-md-6 mx-auto px-4">
-                <button type="submit" class="btn btn-primary" id="calcular-btn">
-                    <span class="badge badge-success">Calcular Descuento</span>
-                </button>
+            <div class="col-12 col-md-6 mx-auto px-4">
+                <div class="d-flex justify-content-between align-items-center">
+
+                    <!-- Botón principal que ocupa el espacio disponible -->
+                    <button type="submit" class="btn btn-primary flex-grow-1 me-2" id="calcular-btn">
+                        <span class="badge badge-success">Calcular Descuento</span>
+                    </button>
+
+                    <button type="button" class="btn btn-secondary me-md-2" id="clear-btn">
+                        <span><i class="fa-solid fa-broom"></i></span>
+                    </button>
+                </div>
             </div>
+
+
+
+
+
+
+
+
+
 
         </div>
     </div>
